lowercase-normalize path

--- a/site/index.html
+++ b/site/index.html
@@ -17,8 +17,8 @@
     <script src="content/js/master.js?v=dee3157b08d0"></script>
     
     <link rel="stylesheet" type="text/css" href="content/qfade.css" />
-    <script type="text/javascript" src="content/Js/realtime.js"></script>
-    <script type="text/javascript" src="content/Js/qfade.js"></script>
+    <script type="text/javascript" src="content/js/realtime.js"></script>
+    <script type="text/javascript" src="content/js/qfade.js"></script>
     <script>
         // javascript for this page!
         StackExchange.realtime.subscribeToRealtimeQuestions(
